--- a/ProjectResult/app/build.gradle
+++ b/ProjectResult/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: "androidx.navigation.safeargs"
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -19,7 +21,6 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -52,15 +53,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'org.apache.poi:poi:3.9'
-    implementation "org.apache.poi:poi-ooxml:3.9"
-    def recyclerview_version = "1.1.0"
-    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'com.android.support:design:28.0.0'
-
+    // Card View
+    def cardview_version = "1.0.0"
+    implementation "androidx.cardview:cardview:$cardview_version"
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
-
-apply plugin: 'com.google.gms.google-services'
